--- a/css/style_1807211417.css
+++ b/css/style_1807211417.css
@@ -19,7 +19,8 @@
     font-size: 2.2em;
   }
 
-  h1:after {
+  section h1:after {
+    /*margin-top: 0;*/
     display: block;
     width: 80px;
     height: 1px;
@@ -262,6 +263,16 @@
     line-height: 24px;
     padding-top: 12px;
   }
+
+  header h1 {
+    font-size: 14px;
+    line-height: 24px;
+    padding-top: 12px;
+    color: #747474;
+    margin-top: 0;
+    font-weight: 500;
+  }
+
 
   header span {
     font-size: 14px;
