--- a/css/style_1.css
+++ b/css/style_1.css
@@ -614,6 +614,8 @@ footer a:hover {
 
     .arrival-description {
         padding-bottom: 20px;
+        padding-left: 0;
+        padding-right: 0;
     }
 }
 
